@@ -1,0 +1,11 @@
+{
+    "name": "Dark Prismarine",
+    "id": "prismarine_dark",
+    "type": "rock",
+    "hardness": 1.5,
+    "resistance": 10.0,
+    "textures": "minecraft:blocks/prismarine_dark",
+    "blocks": {
+        "full": { "id": "minecraft:prismarine", "meta": 2 }
+    }
+}
