@@ -1,0 +1,11 @@
+{
+    "name": "Chiseled Stone Brick",
+    "id": "stonebrick_carved",
+    "type": "rock",
+    "hardness": 1.5,
+    "resistance": 10.0,
+    "textures": "minecraft:blocks/stonebrick_carved",
+    "blocks": {
+        "full": { "id": "minecraft:stonebrick", "meta": 3 }
+    }
+}
