@@ -1,0 +1,11 @@
+{
+    "name": "Cracked Stone Brick",
+    "id": "stonebrick_cracked",
+    "type": "rock",
+    "hardness": 1.5,
+    "resistance": 10.0,
+    "textures": "minecraft:blocks/stonebrick_cracked",
+    "blocks": {
+        "full": { "id": "minecraft:stonebrick", "meta": 2 }
+    }
+}
